<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm" >

        <TextView
            style="@style/item"
            android:text="@string/remoteaddress" />

        <EditText
            android:id="@+id/remoteaddress"
            style="@style/item"
            android:hint="@string/remoteaddresshint" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="2mm" />

        <TextView
            style="@style/item"
            android:text="@string/remoteport" />

        <EditText
            android:id="@+id/remoteport"
            style="@style/item"
            android:hint="@string/remoteporthint"
            android:numeric="integer" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="2mm" />

        <TextView
            style="@style/item"
            android:text="@string/publickey" />

        <EditText
            android:id="@+id/publickey"
            style="@style/item"
            android:typeface="monospace" >

            <requestFocus />
        </EditText>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="2mm" />

        <TextView
            style="@style/item"
            android:text="@string/privatekey" />

        <LinearLayout
            android:id="@+id/PrivateKeyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/privatekey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="99"
                android:singleLine="true"
                android:text="(not generated yet)"
                android:typeface="monospace" />

            <Button
                android:id="@+id/genprivatekey"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="15mm"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generateprivatekey" />
        </LinearLayout>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="2mm" />

        <TextView
            style="@style/item"
            android:text="@string/localpublickey" />

        <LinearLayout
            android:id="@+id/PublicKeyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/localpublickey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="99"
                android:singleLine="true"
                android:text="(not generated yet)"
                android:typeface="monospace" />

            <Button
                android:id="@+id/copypublickey"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Copy" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/enablenacltai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enablenacltai" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioGroup>

    </LinearLayout>